force-app/main/default/objects/Case/fields/HRCSVC21_Age__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC21_Age__c</fullName>
    <description>SE-2623: Age of Case field for Report Open Cases without CQ</description>
    <formula>CEILING(TODAY() - DATEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age (Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>