force-app/main/default/objects/Case/fields/HRCSVC21_CQ_Required_fieldset__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC21_CQ_Required_fieldset__c</fullName>
    <defaultValue>false</defaultValue>
    <description>#SE-2431: Used to check if CQ Required fields are entered on case closure (Describe Cause, Troubleshooting,Resolution,Occurence Location)</description>
    <label>CQ Required fieldset</label>
    <type>Checkbox</type>
</CustomField>