force-app/main/default/objects/Case/fields/HRCSVC_Account_Protocol__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Account_Protocol__c</fullName>
    <description>SE-152. Field that will store the account protocol on the Case page layout. Driven off of the Protocol type defined on the Case.</description>
    <label>Account Protocol</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>