force-app/main/default/objects/Case/fields/HRCSVC_As_Reported__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_As_Reported__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The second level of selection in the &apos;Problem/Resolution Code&apos; hierarchy. SE-1033.</description>
    <inlineHelpText>Search for As Reported using &apos;AAA&apos;</inlineHelpText>
    <label>As Reported - Customer Experience</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>As Reported - Customer Experience does not match selected Complaint Code.</errorMessage>
        <filterItems>
            <field>HRCSVC_Problem_Resolution_Code__c.HRCSVC_Parent_Problem_Code__c</field>
            <operation>equals</operation>
            <valueField>$Source.HRCSVC_Complaint_Code__c</valueField>
        </filterItems>
        <filterItems>
            <field>HRCSVC_Problem_Resolution_Code__c.HRCSVC_Type__c</field>
            <operation>equals</operation>
            <value>As Reported</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>HRCSVC_Problem_Resolution_Code__c</referenceTo>
    <relationshipLabel>Cases (Product)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>