force-app/main/default/objects/Case/fields/HRCSVC_Asset_s_Model_Description__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Asset_s_Model_Description__c</fullName>
    <description>SE-692</description>
    <formula>Asset.HRCFSL_Model_Description__c</formula>
    <label>Asset’s Model Description</label>
    <type>Text</type>
</CustomField>