force-app/main/default/objects/Case/fields/HRCSVC_Awaiting_Customer_Response_Date__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Awaiting_Customer_Response_Date__c</fullName>
    <label>Awaiting Customer Response Date</label>
    <type>Date</type>
</CustomField>