force-app/main/default/objects/Case/fields/HRCSVC_Cancel_Child_Case__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Cancel_Child_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancel Child Case</label>
    <type>Checkbox</type>
</CustomField>