force-app/main/default/objects/Case/fields/HRCSVC_Cancel_Reason__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Cancel_Reason__c</fullName>
    <label>Cancel Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Test / Created in Error</fullName>
            </value>
            <value>
                <fullName>Spam / Junk</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>