force-app/main/default/objects/Case/fields/HRCSVC_Cancel_Work_Orders__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Cancel_Work_Orders__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancel Work Orders</label>
    <type>Checkbox</type>
</CustomField>