force-app/main/default/objects/Case/fields/HRCSVC_Cancellation_Remarks__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Cancellation_Remarks__c</fullName>
    <label>Cancellation Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>