force-app/main/default/objects/Case/fields/HRCSVC_Case_Age__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Case_Age__c</fullName>
    <formula>ClosedDate - CreatedDate</formula>
    <label>Case Age (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>