force-app/main/default/objects/Case/fields/HRCSVC_Case_Resolution__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Case_Resolution__c</fullName>
    <label>Case Resolution</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>