force-app/main/default/objects/Case/fields/HRCSVC_CC_KB_Article__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_CC_KB_Article__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SE-1247</description>
    <label>Care Comm KB Article</label>
    <referenceTo>HRCSVC_Reference__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>