force-app/main/default/objects/Case/fields/HRCSVC_Close_Child_Cases__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Close_Child_Cases__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Close Child Cases</label>
    <type>Checkbox</type>
</CustomField>