force-app/main/default/objects/Case/fields/HRCSVC_Complaint_Code__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Complaint_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The highest level in the &apos;Problem/Resolution Code&apos; hierarchy. SE-1033. &amp; SE-1450</description>
    <inlineHelpText>Search for Code List by Product using &apos;###&apos;</inlineHelpText>
    <label>Code List by Product</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please choose a top-level Problem Code</errorMessage>
        <filterItems>
            <field>HRCSVC_Problem_Resolution_Code__c.HRCSVC_Parent_Problem_Code__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>HRCSVC_Problem_Resolution_Code__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>