force-app/main/default/objects/Case/fields/HRCSVC_CQ_Resolution_Status__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_CQ_Resolution_Status__c</fullName>
    <description>Created as part of SE-64</description>
    <label>CQ Resolution Status</label>
    <length>25</length>
    <type>Text</type>
</CustomField>