force-app/main/default/objects/Case/fields/HRCSVC_Customer_Not_Responded_Since__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Customer_Not_Responded_Since__c</fullName>
    <formula>IF(HRCSVC_Awaiting_Customer_Response_Date__c == NULL,0,(TODAY() - HRCSVC_Awaiting_Customer_Response_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Not Responded Since</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>