force-app/main/default/objects/Case/fields/HRCSVC_Date_Time_Individual_Was_Assigned__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Date_Time_Individual_Was_Assigned__c</fullName>
    <description>The first time an individual is assigned as Case Owner, this field will be automatically timestamped.</description>
    <label>Date/Time Individual Was Assigned</label>
    <type>DateTime</type>
</CustomField>