force-app/main/default/objects/Case/fields/HRCSVC_Email_Case_Contacts__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Email_Case_Contacts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox that indicates whether the Case Contacts should be emailed on case email notifications in addition to the Contact on the case itself.</description>
    <inlineHelpText>Help text would go here</inlineHelpText>
    <label>CC Account Administrator on Case Emails</label>
    <type>Checkbox</type>
</CustomField>