force-app/main/default/objects/Case/fields/HRCSVC_Field_Action_Mod__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Field_Action_Mod__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SE-272</description>
    <label>Field Action/Mod</label>
    <referenceTo>HRCFSL_ModList__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>