force-app/main/default/objects/Case/fields/HRCSVC_Field_Action_Mod_Description__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Field_Action_Mod_Description__c</fullName>
    <description>SE-272</description>
    <formula>HRCSVC_Field_Action_Mod__r.HRCSVC_Description__c</formula>
    <inlineHelpText>It will fetch the Description field from Field Action/Mod object</inlineHelpText>
    <label>Field Action/Mod Description</label>
    <type>Text</type>
</CustomField>