force-app/main/default/objects/Case/fields/HRCSVC_First_Response_Status__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_First_Response_Status__c</fullName>
    <description>Created as part of  SE-64</description>
    <label>First Response Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>