force-app/main/default/objects/Case/fields/HRCSVC_Is_Complain_Qualification_Exist__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Is_Complain_Qualification_Exist__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is updated from the flow &apos;HRCSV Complain Qualification Check; for #SE-142</description>
    <label>Is Complain Qualification Exist</label>
    <type>Checkbox</type>
</CustomField>