force-app/main/default/objects/Case/fields/HRCSVC_Num_of_Article_References__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Num_of_Article_References__c</fullName>
    <label># of Article References</label>
    <summaryFilterItems>
        <field>HRCSVC_Reference__c.HRCSVC_Type__c</field>
        <operation>equals</operation>
        <value>Article</value>
    </summaryFilterItems>
    <summaryForeignKey>HRCSVC_Reference__c.HRCSVC_Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>