force-app/main/default/objects/Case/fields/HRCSVC_Open_Work_Orders__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Open_Work_Orders__c</fullName>
    <defaultValue>false</defaultValue>
    <description>GSC-315</description>
    <label>Open Work Orders</label>
    <type>Checkbox</type>
</CustomField>