force-app/main/default/objects/Case/fields/HRCSVC_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_PO_Number__c</fullName>
    <description>This field is created as part of SE-122 to denote PO Number</description>
    <label>PO #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>