force-app/main/default/objects/Case/fields/HRCSVC_Preferred_Contact_Override__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Preferred_Contact_Override__c</fullName>
    <label>Preferred Contact Override</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>