force-app/main/default/objects/Case/fields/HRCSVC_Preferred_Email__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Preferred_Email__c</fullName>
    <label>Preferred Email</label>
    <type>Email</type>
</CustomField>