force-app/main/default/objects/Case/fields/HRCSVC_Preferred_Phone__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Preferred_Phone__c</fullName>
    <label>Preferred Phone</label>
    <type>Phone</type>
</CustomField>