force-app/main/default/objects/Case/fields/HRCSVC_Prevent_Case_Close__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Prevent_Case_Close__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used in flow &apos;Complaint Qualification Check&apos; for #SE-142. This is checked when there is no work order record related to the Complaint Qualification or When CQ is Incomplete</description>
    <label>Prevent Case Close</label>
    <type>Checkbox</type>
</CustomField>