force-app/main/default/objects/Case/fields/HRCSVC_Problem_Resolution_Reason__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Problem_Resolution_Reason__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The lowest level in the &apos;Problem/Resolution Code&apos; hierarchy. SE-1033.</description>
    <inlineHelpText>Search for Problem/Resolution Reason using &apos;###&apos;</inlineHelpText>
    <label>Problem/Resolution Reason</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>HRCSVC_Problem_Resolution_Code__c.HRCSVC_Parent_Problem_Code__c</field>
            <operation>equals</operation>
            <valueField>$Source.HRCSVC_Main_Sub_Assembly__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>HRCSVC_Problem_Resolution_Code__c</referenceTo>
    <relationshipLabel>Cases (Problem)</relationshipLabel>
    <relationshipName>Cases3</relationshipName>
    <type>Lookup</type>
</CustomField>