force-app/main/default/objects/Case/fields/HRCSVC_Protocol_Category__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Protocol_Category__c</fullName>
    <description>SE-152. Field that captures the category of protocol that needs to be applied for the Case. This selection will drive which account protocol is populated on the Case.</description>
    <label>Protocol Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HRCSVC_Protocol_Category</valueSetName>
    </valueSet>
</CustomField>