force-app/main/default/objects/Case/fields/HRCSVC_Reopened_Case_by_ETQ__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Reopened_Case_by_ETQ__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Updates to True if the case is re-opened by Mulesoft Integration

-- Created as part of CR00032777 | GSC-346</description>
    <label>Reopened Case by ETQ</label>
    <type>Checkbox</type>
</CustomField>