force-app/main/default/objects/Case/fields/HRCSVC_Search_String__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Search_String__c</fullName>
    <formula>HRCSVC_Problem_Resolution_Reason__r.HRCSVC_Search_String__c</formula>
    <label>Search String</label>
    <type>Text</type>
</CustomField>