force-app/main/default/objects/Case/fields/HRCSVC_Second_Customer__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Second_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Second Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Second Customer)</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>