force-app/main/default/objects/Case/fields/HRCSVC_Send_Email_Notifications__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Send_Email_Notifications__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Send Email Notifications</label>
    <type>Checkbox</type>
</CustomField>