force-app/main/default/objects/Case/fields/HRCSVC_Send_Email_Notifications_Picklist__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Send_Email_Notifications_Picklist__c</fullName>
    <description>SE-797</description>
    <label>Send Email Notifications</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>