force-app/main/default/objects/Case/fields/HRCSVC_SLA_Milestone_Time__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_SLA_Milestone_Time__c</fullName>
    <description>SE-56 - Adding additional 30 mins from the time of case creation for SLA.</description>
    <formula>CreatedDate + (0.5/24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA Milestone Time</label>
    <type>DateTime</type>
</CustomField>