force-app/main/default/objects/Case/fields/HRCSVC_Software_Version__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Software_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SE-2246 - Given the need for the Case Software Version field to reflect a point in time versus continually update based on the Asset,</description>
    <label>Software Version</label>
    <referenceTo>HRCSVC_Software_Version__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>