force-app/main/default/objects/Case/fields/HRCSVC_Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Status_Reason__c</fullName>
    <label>On Hold Status Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>