force-app/main/default/objects/Case/fields/HRCSVC_Subtypes__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Subtypes__c</fullName>
    <description>SE-1140</description>
    <label>Subtypes</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Complaint/Allegation of Deficiency</fullName>
            </value>
            <value>
                <fullName>Configuration Change</fullName>
            </value>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Duplicate Case</fullName>
            </value>
            <value>
                <fullName>Factory Repair/Replacement</fullName>
            </value>
            <value>
                <fullName>Field Action/Mod</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Installation/Commissioning</fullName>
            </value>
            <value>
                <fullName>Internal Communication / Message Technician</fullName>
            </value>
            <value>
                <fullName>No Action Required</fullName>
            </value>
            <value>
                <fullName>Non-Technical Inquiry</fullName>
            </value>
            <value>
                <fullName>Onsite Repair</fullName>
            </value>
            <value>
                <fullName>Parts</fullName>
            </value>
            <value>
                <fullName>Product Enhancement</fullName>
            </value>
            <value>
                <fullName>Quality of Service</fullName>
            </value>
            <value>
                <fullName>Quote</fullName>
            </value>
            <value>
                <fullName>Return for Credit No Allegation of Deficiency</fullName>
            </value>
            <value>
                <fullName>Return for Credit w/ Allegation of Deficiency</fullName>
            </value>
            <value>
                <fullName>Routine/Preventative Maintenance</fullName>
            </value>
            <value>
                <fullName>Routine Calibration</fullName>
            </value>
            <value>
                <fullName>Safety Corrective Action</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Technical Inquiry</fullName>
            </value>
            <value>
                <fullName>Upgrade Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>