force-app/main/default/objects/Case/fields/HRCSVC_SW_Version_Missing__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_SW_Version_Missing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SE-2521</description>
    <label>SW Version Missing</label>
    <type>Checkbox</type>
</CustomField>