force-app/main/default/objects/Case/fields/HRSCVC_Non_Standard_Config_Details__c.field-meta.xml
<CustomField>
    <fullName>HRSCVC_Non_Standard_Config_Details__c</fullName>
    <description>SE-260 - Formula fields which will be fetched from Asset.</description>
    <formula>Asset.HRCSVC_Non_Standard_Config_Details__c</formula>
    <label>Non-Standard Config Details</label>
    <type>Text</type>
</CustomField>