force-app/main/default/objects/Case/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Pending Status Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending KB Article</fullName>
            </value>
            <value>
                <fullName>Pending Customer Purchase Order</fullName>
            </value>
            <value>
                <fullName>Pending Access to Product</fullName>
            </value>
            <value>
                <fullName>Pending Customer Issue Resolution Notes</fullName>
            </value>
            <value>
                <fullName>Monitoring</fullName>
            </value>
            <value>
                <fullName>Pending Work Order Completion</fullName>
            </value>
            <value>
                <fullName>Pending Root Cause Analysis (RCA)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>