force-app/main/default/objects/Case/recordTypes/Care_Comm.recordType-meta.xml
<RecordType>
    <fullName>Care_Comm</fullName>
    <active>true</active>
    <businessProcess>HRC Service</businessProcess>
    <label>Care Comm</label>
</RecordType>