force-app/main/default/objects/Case/recordTypes/Factory_Repair_Depot.recordType-meta.xml
<RecordType>
    <fullName>Factory_Repair_Depot</fullName>
    <active>true</active>
    <businessProcess>HRC Service</businessProcess>
    <label>Factory Repair Depot</label>
</RecordType>