force-app/main/default/objects/Case/recordTypes/HRCSVC_Capital_Service.recordType-meta.xml
<RecordType>
    <fullName>HRCSVC_Capital_Service</fullName>
    <active>true</active>
    <businessProcess>HRC Service</businessProcess>
    <label>Capital Service</label>
</RecordType>