force-app/main/default/objects/Case/recordTypes/Junk.recordType-meta.xml
<RecordType>
    <fullName>Junk</fullName>
    <active>true</active>
    <businessProcess>HRC Service</businessProcess>
    <description>for Phishing or Spam emails that come in from Email to Case</description>
    <label>Junk</label>
</RecordType>