force-app/main/default/objects/Case/recordTypes/Respiratory_Email_Request.recordType-meta.xml
<RecordType>
    <fullName>Respiratory_Email_Request</fullName>
    <active>true</active>
    <businessProcess>Respiratory Email Request</businessProcess>
    <description>Email to case respiratory technical request (triggers a new record in custom object)</description>
    <label>Respiratory Email Request</label>
</RecordType>