force-app/main/default/objects/Case/recordTypes/Scaletronix_Service.recordType-meta.xml
<RecordType>
    <fullName>Scaletronix_Service</fullName>
    <active>true</active>
    <businessProcess>HRC Service</businessProcess>
    <description>Welch Allyn Scaletronix Service</description>
    <label>Scaletronix Service</label>
</RecordType>