force-app/main/default/objects/Case/recordTypes/ServiceHub_Installations.recordType-meta.xml
<RecordType>
    <fullName>ServiceHub_Installations</fullName>
    <active>true</active>
    <businessProcess>HRC Service</businessProcess>
    <description>Used for Welch Allyn Installations</description>
    <label>ServiceHub Installations</label>
</RecordType>