force-app/main/default/objects/Case/recordTypes/WA_Technical_Support.recordType-meta.xml
<RecordType>
    <fullName>WA_Technical_Support</fullName>
    <active>true</active>
    <businessProcess>HRC Service</businessProcess>
    <description>WA Technical Support</description>
    <label>WA Technical Support</label>
</RecordType>