force-app/main/default/objects/Case/validationRules/Case_Status_cannot_be_a_value_than_New.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_Status_cannot_be_a_value_than_New</fullName>
    <active>true</active>
    <description>SE-1140</description>
    <errorConditionFormula>AND( OR(ISNEW(), ISCHANGED(Status)), NOT(ISPICKVAL(Status, &quot;New&quot;)), NOT( $Setup.HRCFSL_Org_Exception_Rule__c.HRCFSL_Validation_Rule__c ), ISPICKVAL(Type, &quot;Problem - Product Related&quot;), HRCSVC_Is_Complain_Qualification_Exist__c = false )</errorConditionFormula>
    <errorMessage>Case Status also cannot be a value other than New if the Type = &quot;Problem - Product Related&quot; and zero related complaint qualification records.</errorMessage>
</ValidationRule>