force-app/main/default/objects/Case/validationRules/HRCSVC_Cancel_Rsn_Other_Requires_Remarks.validationRule-meta.xml
<ValidationRule>
    <fullName>HRCSVC_Cancel_Rsn_Other_Requires_Remarks</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPickval(HRCSVC_Cancel_Reason__c,&apos;Other&apos;), ISBLANK(HRCSVC_Cancellation_Remarks__c))</errorConditionFormula>
    <errorMessage>Please Add Cancellation Remarks</errorMessage>
</ValidationRule>