force-app/main/default/objects/Case/validationRules/HRCSVC_Cancelled_Status_Requires_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>HRCSVC_Cancelled_Status_Requires_Reason</fullName>
    <active>true</active>
    <description>Status Reason needs to be provided for cancelled cases</description>
    <errorConditionFormula>AND(ISPickval(Status,&apos;Canceled&apos;), ISBLANK(TEXT(HRCSVC_Cancel_Reason__c)))</errorConditionFormula>
    <errorDisplayField>HRCSVC_Cancel_Reason__c</errorDisplayField>
    <errorMessage>Please provide cancellation reason.</errorMessage>
</ValidationRule>