force-app/main/default/objects/Case/validationRules/HRCSVC_Case_Path_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>HRCSVC_Case_Path_Validation</fullName>
    <active>true</active>
    <description>To check that the status reason field should not be empty based on the status</description>
    <errorConditionFormula>AND(OR(ISCHANGED(Status),ISCHANGED(HRCSVC_Status_Reason__c)),CONTAINS($CustomMetadata.HRCFSL_Organization_Settings__mdt.HRCSVC_Case_Status_Path_Values.HRCFSL_Component_Detail__c ,text( Status )),ISBLANK(HRCSVC_Status_Reason__c))</errorConditionFormula>
    <errorMessage>Please fill the Status Reason</errorMessage>
</ValidationRule>