force-app/main/default/objects/Case/validationRules/HRCSVC_Case_Resolution_for_Closure.validationRule-meta.xml
<ValidationRule>
    <fullName>HRCSVC_Case_Resolution_for_Closure</fullName>
    <active>true</active>
    <description>SE-155: To prevent closing a case without case resolution</description>
    <errorConditionFormula>AND(
ISCHANGED(Status),
CONTAINS($CustomMetadata.HRCFSL_Organization_Settings__mdt.HRCSVC_Case_Status_for_Resolution.HRCFSL_Component_Detail__c ,
text( Status )),
ISBLANK(HRCSVC_Case_Resolution__c)
)</errorConditionFormula>
    <errorDisplayField>HRCSVC_Case_Resolution__c</errorDisplayField>
    <errorMessage>You cannot close a case without a resolution</errorMessage>
</ValidationRule>